# ukui-settings-daemon

./: .gitignore  AUTHORS  Makefile.am  NEWS  README  README.md  autogen.sh  config.h  configure.ac  gen_project.sh  install  install.sh  keyboard.ukui-settings-plugin  mvSo.sh  translate_generation.sh  ukui-settings-daemon.pro
data/: 50-accessibility.xml.in  61-keyboard.hwdb  Makefile.am  a11y-keyboard.ukui-settings-plugin  a11y-settings.ukui-settings-plugin  auto-brightness.ukui-settings-plugin  background.ukui-settings-plugin  clipboard.ukui-settings-plugin_bak  color.ukui-settings-plugin  data.pri  dummy.ukui-settings-plugin  housekeeping.ukui-settings-plugin  keybindings.ukui-settings-plugin  media-keys.ukui-settings-plugin  mouse.ukui-settings-plugin_bak  mpris.ukui-settings-plugin  msd-locate-pointer.1  org.ukui.SettingsDaemon.plugins.a11y-keyboard.gschema.xml  org.ukui.SettingsDaemon.plugins.a11y-keyboard.gschema.xml.in  org.ukui.SettingsDaemon.plugins.a11y-settings.gschema.xml  org.ukui.SettingsDaemon.plugins.a11y-settings.gschema.xml.in  org.ukui.SettingsDaemon.plugins.auto-brightness.gschema.xml  org.ukui.SettingsDaemon.plugins.background.gschema.xml  org.ukui.SettingsDaemon.plugins.background.gschema.xml.in  org.ukui.SettingsDaemon.plugins.clipboard.gschema.xml  org.ukui.SettingsDaemon.plugins.clipboard.gschema.xml.in  org.ukui.SettingsDaemon.plugins.color.gschema.xml  org.ukui.SettingsDaemon.plugins.datetime.gschema.xml.in  org.ukui.SettingsDaemon.plugins.housekeeping.gschema.xml  org.ukui.SettingsDaemon.plugins.housekeeping.gschema.xml.in  org.ukui.SettingsDaemon.plugins.keybindings.gschema.xml  org.ukui.SettingsDaemon.plugins.keybindings.gschema.xml.in  org.ukui.SettingsDaemon.plugins.keyboard.gschema.xml  org.ukui.SettingsDaemon.plugins.keyboard.gschema.xml.in  org.ukui.SettingsDaemon.plugins.media-keys.gschema.xml  org.ukui.SettingsDaemon.plugins.media-keys.gschema.xml.in  org.ukui.SettingsDaemon.plugins.mouse.gschema.xml  org.ukui.SettingsDaemon.plugins.mouse.gschema.xml.in  org.ukui.SettingsDaemon.plugins.mpris.gschema.xml  org.ukui.SettingsDaemon.plugins.mpris.gschema.xml.in  (+49 more)
plugins/: Makefile.am
plugins/a11y-keyboard/: Makefile.am  a11y-keyboard-manager.cpp  a11y-keyboard-manager.h  a11y-keyboard-plugin.cpp  a11y-keyboard-plugin.h  a11y-keyboard.pro  a11y-keyboard.ukui-settings-plugin.in  a11y-keyboard_global.h  a11y-preferences-dialog.cpp  a11y-preferences-dialog.h  a11y-preferences-dialog.ui  test-a11y-preferences-dialog.c  usd-a11y-keyboard-manager.c  usd-a11y-keyboard-manager.h  usd-a11y-keyboard-plugin.c  usd-a11y-keyboard-plugin.h  usd-a11y-preferences-dialog.c  usd-a11y-preferences-dialog.h
plugins/a11y-settings/: Makefile.am  a11y-settings-manager.cpp  a11y-settings-plugin.cpp  a11y-settings-plugin.h  a11y-settings.pro  a11y-settings.ukui-settings-plugin.in  a11y-settings_global.h  a11ysettingsmanager.cpp  a11ysettingsmanager.h  a11ysettingsplugin.cpp  a11ysettingsplugin.h  usd-a11y-settings-manager.c  usd-a11y-settings-manager.h  usd-a11y-settings-plugin.c  usd-a11y-settings-plugin.h
plugins/authority/: authority.pro  authorityservice.cpp  authorityservice.h  main.cpp
plugins/auto-brightness/: auto-brightness.pro  autoBrightness-manager.cpp  autoBrightness-manager.h  autoBrightness-manager.h.autosave  autoBrightness-plugin.cpp  autoBrightness-plugin.h  brightThread.cpp  brightThread.h
plugins/background/: Makefile.am  background-manager.cpp  background-manager.h  background-plugin.cpp  background-plugin.h  background.pro  background.ukui-settings-plugin.in  backgroundmanager.cpp  backgroundmanager.h  backgroundplugin.cpp  backgroundplugin.h  test-background.c  usd-background-manager.c  usd-background-manager.h  usd-background-plugin.c  usd-background-plugin.h
plugins/clipboard/: Makefile.am  clipboard-manager.cpp  clipboard-manager.h  clipboard-plugin.cpp  clipboard-plugin.h  clipboard.pro  clipboard.ukui-settings-plugin.in  list.h  main.cpp  usd-clipboard-manager.c  usd-clipboard-manager.h  usd-clipboard-plugin.c  usd-clipboard-plugin.h  xutils.h
plugins/color/: color-edid.cpp  color-edid.h  color-info.h  color-manager.cpp  color-manager.h  color-plugin.cpp  color-plugin.h  color-profiles.cpp  color-profiles.h  color-state.cpp  color-state.h  color.pro
plugins/common/: Makefile.am  common.pri  common.pro  common_global.h  eggaccelerators.c  eggaccelerators.h  ukui-input-helper.c  ukui-input-helper.h  ukui-keygrab.c  ukui-keygrab.cpp  ukui-keygrab.h  ukui-osd-window.cpp  ukui-osd-window.h  usd-input-helper.c  usd-input-helper.h  usd-keygrab.c  usd-keygrab.h  usd-osd-window.c  usd-osd-window.h
plugins/datetime/: Makefile.am  datetime  datetime-mechanism-main.cpp  datetime-mechanism.cpp  datetime-mechanism.h  datetime.pro  org.ukui.SettingsDaemon.DateTimeMechanism.conf  org.ukui.SettingsDaemon.DateTimeMechanism.service.in  org.ukui.settingsdaemon.datetimemechanism.policy.in  system-timezone.cpp  system-timezone.h  usd-datetime-mechanism-main.c  usd-datetime-mechanism.c  usd-datetime-mechanism.h  usd-datetime-mechanism.xml
plugins/dummy/: Makefile.am  dummy.pro  dummy.ukui-settings-plugin.in  dummy_global.h  dummymanager.cpp  dummymanager.h  dummyplugin.cpp  dummyplugin.h  usd-dummy-manager.c  usd-dummy-manager.h  usd-dummy-plugin.c  usd-dummy-plugin.h
plugins/housekeeping/: Makefile.am  housekeeping-manager.cpp  housekeeping-manager.h  housekeeping-plugin.cpp  housekeeping-plugin.h  housekeeping.pro  housekeeping.ukui-settings-plugin.in  ldsm-trash-empty.cpp  (+17 more)
ukui-settings-daemon/: Makefile.am  global.h  main.c  main.cpp  ukui-settings-manager.c  ukui-settings-manager.h  ukui-settings-manager.xml  ukui-settings-module.c  ukui-settings-module.h  ukui-settings-plugin-info.c  ukui-settings-plugin-info.h  ukui-settings-plugin.c  ukui-settings-plugin.h  ukui-settings-profile.c  ukui-settings-profile.h  ukuisettingsmanager.cpp  ukuisettingsmanager.h  ukuisettingsmodule.cpp  ukuisettingsmodule.h  ukuisettingsplugin.cpp  ukuisettingsplugin.h  ukuisettingsplugininfo.cpp  ukuisettingsplugininfo.h  ukuisettingsprofile.cpp  ukuisettingsprofile.h
(+469 files in other folders)
